home/bar-assistant/bar-assistant-deployment.yaml
# Deployment for the Bar Assistant Backend Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-assistant
  labels:
    app: bar-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bar-assistant
  template:
    metadata:
      labels:
        app: bar-assistant
    spec:
      containers:
        - name: bar-assistant-server
          image: ghcr.io/karlomikus/barassistant:5.8.0
          volumeMounts:
            - name: bar-data
              mountPath: /var/www/cocktails/storage/bar-assistant
      volumes:
        - name: bar-data
          persistentVolumeClaim:
            claimName: bar-assistant-config-pvc
