home/bar-assistant/salt-rim-deployment.yaml
# Deployment for the Salt Rim Frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salt-rim
  labels:
    app: salt-rim
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: salt-rim
  template:
    metadata:
      labels:
        app: salt-rim
    spec:
      containers:
        - name: salt-rim-frontend
          image: ghcr.io/karlomikus/salt-rim:4.5.0 # Using specific version from compose
