home/bar-assistant/salt-rim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salt-rim
  namespace: default
  labels:
    app: salt-rim
spec:
  selector:
    app: salt-rim
  ports:
    - protocol: TCP
      port: 8080 # Service port
  type: ClusterIP # Only needs internal cluster access
