home/bar-assistant/bar-assistant-http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: bar-app-httproute
    namespace: home
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: traefik
    hostnames:
        - "bar.kerrlab.app"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /bar
          filters:
              - type: URLRewrite
                urlRewrite:
                    path:
                        type: ReplacePrefixMatch
                        replacePrefixMatch: /
          backendRefs:
              - name: bar-assistant
                port: 8080
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: salt-rim # Frontend service
                port: 8080
